-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.4
-
None
-
Windows 10
-
-
abfac029ceaf6c3199694a505f312ace347b8245 (qt/qtbase/5.13)
I've noticed this error a while back in my Qt-based file manager application. When I got around to fixing it, I've found that other people have discovered it as well: https://stackoverflow.com/questions/53411886/qfileinfo-size-is-returning-shortcut-target-size
Note how difficult it is to get the true size of a link file. And, of course, the documentation states that size() should not follow the symlink.
- duplicates
-
QTBUG-24831 QFile/QFileInfo function size() wrong for symlinks(WIN)
-
- Closed
-
- relates to
-
QTBUG-45218 QFileInfo::size() and QFile::size() returns link target size for windows .lnk files. This contradicts the documentation
-
- Reported
-
-
QTBUG-75869 Make Qt aware of symlinks, junctions, and shortcuts on Windows
-
- Closed
-